update navbar and dockerize client

--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 .navbar-container {
     display: inline-flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     width: 100%
 }
 .home-link {
@@ -13,14 +13,21 @@
 
 .navlink-container {
     display: inline-flex;
-    justify-content: space-between;
+    justify-self: center;
+    justify-content: center;
     align-items: center;
 }
 .nav-links {
     color: #fff;
     display: inline-flex;
+    justify-content: center;
     align-items: center;
     text-decoration: none;
     padding: 0.5rem 1rem;
     height: 100%;
+  }
+  #user-items {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
   }
